--- a/main.css
+++ b/main.css
@@ -1,5 +1,43 @@
-div {
-  border: 1px solid black;
-  color: blue;
+* {
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica,
+    Arial, Roboto, Open Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  margin: 0;
 }
 
+:root {
+  --thinfont: 300;
+  --bigfont: 68px;
+  --smallfont: 20px;
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 12.5px 20px 20px;
+}
+
+.nav a {
+  text-decoration: none;
+  color: #000;
+}
+
+.nav-right .nav-link {
+  margin: 0 7.5px;
+  font-size: var(--smallfont);
+  font-weight: var(--thinfont);
+}
+
+.nav-logo {
+  display: flex;
+  align-items: center;
+}
+
+.nav-logo__title {
+  font-size: 16px;
+  max-width: 55px;
+  margin-left: 10px;
+  font-weight: bolder;
+}
